--- a/22.val.html
+++ b/22.val.html
@@ -15,6 +15,7 @@
 
         <button id="submitBtn" type="submit">submit</button>
         <button id="showPass" type="button">showPass</button>
+        <button id="autoInput" type="button">auto input</button>
     </form>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"
@@ -35,6 +36,11 @@
 
             console.log('username:', $('#username').val());
             console.log('userpassword:', $('#userpassword').val());
+        })
+
+        $('#autoInput').click(function () {
+            $('#username').val('john@gmail.com')
+            $('#userpassword').val('123456')
         })
     </script>
 </body>
