--- a/23.append.html
+++ b/23.append.html
@@ -10,7 +10,8 @@
 
 <body>
     <input type="text" name="" id="">
-    <button>Add</button>
+    <button id="add">Add</button>
+    <button id="check">check</button>
     <div class="container">
         <div class="row">
             <!-- before -->
@@ -31,10 +32,19 @@
         // $("ul").append("<li>item 3</li>");
         // $("ul").append("<li>item 4</li>");
 
-        $('button').click(function () {
+        const getBy = document.getElementsByTagName('li')
+        const querySelector = document.querySelectorAll('li')
+
+        $('#add').click(function () {
             const inputVal = $('input').val()
-            $('ul').before(`<li>${inputVal}</li>`)
+            $('ul').append(`<li>${inputVal}</li>`)
             $('input').val('')
+        })
+
+        $('#check').click(function () {
+            console.log('getBy', getBy);
+            // const querySelector = document.querySelectorAll('li')
+            console.log('querySelector', querySelector);
         })
     </script>
 </body>
