--- a/39.ex10.html
+++ b/39.ex10.html
@@ -72,6 +72,9 @@
         // })
 
         $('.btn').click(function () {
+
+            // 方法一:
+
             // if ($(event.target).is(":contains('S')")) {
             //     console.log('s btn');
             // }
@@ -81,6 +84,8 @@
             // if ($(event.target).is(":contains('L')")) {
             //     console.log('l btn');
             // }
+
+            // 方法二:
 
             // if ($(event.target).text() === 'S') {
             //     console.log('s btn');
