--- a/39.ex10.html
+++ b/39.ex10.html
@@ -38,14 +38,14 @@
         <h2>jQuery</h2>
         <!-- article -->
         <article>
-            <p>
+            <p class="item product">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Aperiam consectetur, iusto ratione, quas nihil
                 exercitationem blanditiis, dolorum numquam adipisci sequi
                 harum facilis deserunt reiciendis ducimus dicta natus maxime
                 eligendi fugiat!
             </p>
-            <p>
+            <p class="item product">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Dignissimos, reprehenderit pariatur illo quaerat consectetur
                 eius blanditiis placeat sequi natus, amet ipsam deleniti
@@ -77,14 +77,16 @@
             $(event.target).addClass('active').siblings().removeClass('active')
 
             const btnText = $(event.target).text();
-            console.log('btnText', btnText);
+            // console.log('btnText', btnText);
 
             const siblingsText = $(event.target).siblings().text()
-            console.log('siblingsText', typeof siblingsText);
-            console.log('siblingsText', siblingsText[0]);
-            console.log('siblingsText', siblingsText[1]);
+            // console.log('siblingsText', typeof siblingsText);
+            // console.log('siblingsText', siblingsText[0]);
+            // console.log('siblingsText', siblingsText[1]);
 
-            $('p').addClass(`font${btnText}`).removeClass(`font${siblingsText[0]} font${siblingsText[1]}`)
+            $('p').removeClass('fontS fontM fontL').addClass(`font${btnText}`)
+
+            // .removeClass(`font${siblingsText[0]} font${siblingsText[1]}`)
 
 
             // 方法一:
